# gravyvalet

./: .gitignore  CHANGELOG  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run_gravyvalet_tests.yml
addon_imps/citations/: zotero_org.py
addon_imps/link/: dataverse.py
addon_imps/links/: dataverse.py
addon_imps/storage/: dropbox.py  github.py  gitlab.py  owncloud.py
addon_service/: apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
addon_service/addon_imp/: instantiation.py
addon_service/addon_operation_invocation/: models.py  serializers.py  views.py
addon_service/admin/: __init__.py  _base.py
addon_service/authorized_account/: models.py  polymorphic_serializers.py  serializers.py  utils.py  views.py
addon_service/common/: aiohttp_session.py  enum_serializers.py  filtering.py  get_user_uri.py  known_imps.py  network.py  openapi_extensions.py  osf.py  permissions.py  queryparams_filter.py  regex.py  serializer_fields.py  uri_filter.py  validators.py  view_only_filter.py  viewsets.py
addon_service/configured_addon/: models.py  polymorphic_serializers.py  serializers.py  utils.py  views.py
addon_service/credentials/: models.py  serializers.py
addon_service/oauth1/: views.py
app/: celery.py  env.py  middleware.py  settings.py  urls.py
services_setup_doc/: README.md  bitbucket-README.md  box-README.md  dropbox-README.md  figshare-README.md  github-README.md  googledrive-README.md  mendeley-README.md  onedrive-README.md  zotero-README.md
(+75 files in other folders)
