[tool.poetry]
name = "gravyvalet"
version = "25.1.0"
description = "gravyvalet fetches, serves, and holds small ladlefuls of precious bytes."
authors = []
license = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.20"
daphne = "4.1.2"
djangorestframework = "3.15.2"
djangorestframework-jsonapi = "7.1.0"
django-cors-headers = "4.7.0"
django-filter = "^24.3"
celery = "5.5.0"
jsonschema = "4.23.0"
aiohttp = "3.11.14"
pyjwe = "1.0.0"
cryptography = "44.0.1"
boto3 = "1.34"
boa-api = "^0.1.14"
django-silk = "^5.3.2"
django-celery-beat = "^2.7.0"
tqdm = "^4.67.1"
itsdangerous = "^2.2.0"
redis = "^5.2.1"
drf-spectacular = "^0.28.0"
drf-spectacular-jsonapi = {git = "https://github.com/opaduchak/drf-spectacular-json-api.git", branch = "osf-fixes"}


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
responses = "^0.25.3"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pdoc = "14.5.1"
psycopg = {version = ">=3.2.6", extras = ["binary"]}

[tool.poetry.group.release.dependencies]
sentry-sdk = "2.7.1"
newrelic = "^10.2.0"
psycopg = {version = ">=3.2.6", extras = ["c"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
